@@ -1,9 +1,12 @@
-CHANGES.txt - 2007-08-10
+CHANGES.txt - 2007-08-13
 ------------------------
 
 
 CHANGES IN CUPS V1.3.0
 
+	- The scheduler did not handle out-of-file conditions
+	  gracefully when accepting new connections, leading to
+	  heavy CPU usage.
 	- The scheduler did not detect ServerBin misconfigurations
 	  (STR #2470)
 	- "AuthType Default" did not work as expected when the
